Fixed few errors

--- a/form.html
+++ b/form.html
@@ -32,12 +32,12 @@
 
     <!-- Food allergies paragrpah input -->
         <label for="allergies">Do you have any allergies?</label>
-        <textarea name="allergies" id="allergies" placeholder="Hey Monte"></textarea>
+        <textarea name="allergies" id="allergies" placeholder="Hey Monte" minlength="1" maxlength="200"></textarea>
         <br>
         <br>
         
     <!-- Send button -->
-        <button>Send</button>
+        <input type="submit" value="Send">
     </form>
 </body>
 </html>
